# agentic-prompt-engineer-crewai

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
artifacts/: model.dot
artifacts/visualis/: agents_png.py  architecture_png.py  graphviz_utils.py  model_png.py  run_all.py
frontend/prompt_engine/: index.html  package-lock.json  package.json  vite.config.js
frontend/prompt_engine/src/: index.css
frontend/prompt_engine/src/components/: Dashboard.jsx
frontend/prompt_engine/src/styles/: Dashboard.css
knowledge/: knowledge.md  reflective_companion_prompt.txt  steps.md
src/prompt_agent/: api.py  crew.py  main.py
src/prompt_agent/config/: agents.yaml  tasks.yaml
src/prompt_agent/tools/: custom_tool.py
