[project]
name = "prompt_agent"
version = "0.1.0"
description = "prompt-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "fastapi>=0.135.1",
    "langchain-groq>=1.1.2",
    "litellm>=1.75.3",
]

[project.scripts]
prompt_agent = "prompt_agent.main:run"
run_crew = "prompt_agent.main:run"
train = "prompt_agent.main:train"
replay = "prompt_agent.main:replay"
test = "prompt_agent.main:test"
run_with_trigger = "prompt_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
